ubiquity-slideshow-ubuntu (17) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Force UTF-8 for po4a-translate as well.

  [ Dylan McCall ]
  * Updated content for Ubuntu slideshow. New .pot file.

 -- Dylan McCall <dylanmccall@gmail.com>  Wed, 24 Mar 2010 10:41:20 -0700

ubiquity-slideshow-ubuntu (16) lucid; urgency=low

  [ Dylan McCall ]
  * New look for the Ubuntu slideshow.
  * Updated license details for images in debian/copyright.
  * Larger dimensions for Ubuntu slideshow: 816x500, from 700x420.
  * Removed GIMP build dependency. GIMP scripts in images-source no
    longer to be run at build time; final icons should be added
    manually in source package.

  [ Evan Dandrea ]
  * Use the official Firefox icon, rather than a generic browser icon.
  * Freeze exception for new design (LP: #538411).
  * Update the update-launchpad-translations script.
  * Update translations from Launchpad.

  [ Richard A. Johnson ]
  * Updated slideshow for Kubuntu installer
    (LP: #540348) (LP: #534949) (LP: #539147)

  [ Brian Murray ]
  * resolved some grammatical issues with the xubuntu slides

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 24 Mar 2010 14:31:56 +0000

ubiquity-slideshow-ubuntu (15) lucid; urgency=low

  [ Dylan McCall ]
  * Rearranged source package to closely mirror build output.
  * Renamed ./slides to ./slideshows, reflecting new arrangement.
  * Each slideshow now has a unique slideshow.conf file.
  * Split link-core and link-default for slideshows. link-default
    is NOT symlinked to a central place, encouraging customization.
  * Generated icons now go straight to the build directory.
  * Merging new Xubuntu slideshow.
  * Merging new visuals for Kubuntu slideshow.

  [ Evan Dandrea ]
  * Fix typo in Kubuntu chat slide.
  * Move from po2html, which is no longer included in Debian, to po4a.
  * Make each slideshow package Replace and Conflict the ubiquity-
    slideshow virtual package, to ensure that only one slideshow can be