@@ -3,9 +3,10 @@
 <div class="main">
 
 <div class="content"><ul>
-	<li>Ubuntu is ready to play videos and music from the web, from CDs and DVDs.</li>
-	<li><em>Rhythmbox Music Player</em> helps build and organize your music collection. Insert a music CD to copy it to your computer, or try the built in <em>Ubuntu One Music Store</em> to choose from millions of songs online.</li>
-	<li>Rhythmbox works with portable music players. Just plug one in to send music from your library.</li>
+	<li>Ubuntu is ready to play music and videos from the web, from CDs and DVDs.</li>
+	<li>The <em>Rhythmbox Music Player</em> lets you organize your music, listen to Internet radio, and purchase a variety of songs. Manage your podcast subscriptions and automatically download new episodes.</li>
+	<li>Discover popular, DRM-free music available for purchase from the <em>Ubuntu One Music Store</em>, a cloud-enabled digital music store.</li>
+	<li>Plug in an MP3 player to start synchronizing your music collection, or insert a CD to copy songs to your computer.</li>
 </ul></div>
 
 </div>
