@@ -2,6 +2,7 @@ ubiquity-slideshow-ubuntu (17) UNRELEASED; urgency=low
 
   [ Evan Dandrea ]
   * Force UTF-8 for po4a-translate as well.
+  * Updated Rhythmbox and Ubuntu One slides.  Thanks Matt Griffin!
 
   [ Dylan McCall ]
   * Updated content for Ubuntu slideshow. New .pot file.
